# panelesp-v2c-dashboard

./: .gitignore  AGENTS.md  AI_CONTEXT.md  NUEVO_CHAT.md  README.md  globals.xml  sdkconfig.defaults
components/esp_lcd_jd9165/: CHECKSUMS.json  esp_lcd_jd9165.c
components/services/: app_config.c  ota_service.c
components/ui/: ui.c
docs/: configuration.md  errors.md  github.md  lvgl-pro.md  validation.md  wifi-remote-c6.md
lvgl_pro/: CMakeLists.txt  README.md  file_list_gen.cmake  globals.xml
lvgl_pro/components/: action_button.xml  bottom_nav.xml  flow_node.xml  gauge_arc.xml  metric_card.xml  power_bar.xml  top_bar.xml
lvgl_pro/fonts/: README.md
lvgl_pro/images/: README.md
lvgl_pro/screens/: README.md  charger.xml  evcc.xml  solar.xml  vehicle.xml
lvgl_pro/sdcard/assets/icons/: README.md
lvgl_pro/widgets/: README.md
main/: Kconfig.projbuild  app_main.c
screens/: charger.xml  evcc.xml  solar.xml  vehicle.xml
versions/v0.1.0/: AI_CONTEXT.md  CMakeLists.txt
versions/v0.1.0/components/esp_lcd_jd9165/: .component_hash  idf_component.yml
versions/v0.1.0/docs/: errors.md
versions/v0.1.0/main/: CMakeLists.txt  board_display.c  idf_component.yml
versions/v0.1.1/: AI_CONTEXT.md  sdkconfig.defaults
versions/v0.1.1/docs/: errors.md  lvgl-pro.md  wifi-remote-c6.md
versions/v0.1.1/main/: app_main.c
versions/v0.1.2/: .gitignore  AI_CONTEXT.md  partitions.csv
versions/v0.1.2/docs/: errors.md
versions/v0.1.2/main/: Kconfig.projbuild  board_display.h
versions/v0.1.2/tools/: new-version.ps1
versions/v0.1.3/: AI_CONTEXT.md  sdkconfig.defaults
versions/v0.1.3/docs/: configuration.md  errors.md
versions/v0.1.3/lvgl_pro/: README.md
versions/v0.1.4/: AI_CONTEXT.md  NUEVO_CHAT.md
versions/v0.1.4/components/services/: CMakeLists.txt  v2c_trydan.c
versions/v0.1.4/docs/: errors.md
versions/v0.1.4/main/: idf_component.yml
versions/v0.1.5/: AGENTS.md  NUEVO_CHAT.md  versions-README.md
versions/v0.1.5/docs/: github.md
versions/v0.1.5/lvgl_pro/: project.xml
versions/v0.1.5/main/: CMakeLists.txt
versions/v0.1.6/: AI_CONTEXT.md  README.md  sdkconfig.defaults
versions/v0.1.6/docs/: errors.md  lvgl-pro-xml.md
versions/v0.1.6/lvgl_pro/: README.md  component_lib_list_gen.cmake  globals.xml  user_config.cmake
versions/v0.1.6/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  board_display.c  idf_component.yml
versions/v0.1.6/tools/: set-stable-version.ps1
(+47 files in other folders)
